--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@polkadot/api": "^15.0.1",
+    "@polkadot/api-augment": "^15.0.1",
+    "@polkadot/api-contract": "^15.0.1",
+    "@polkadot/extension-dapp": "^0.56.2",
     "@react-spring/rafz": "^9.7.3",
     "@solana/web3.js": "^1.87.1",
     "@types/axios": "^0.14.0",
@@ -23,6 +27,7 @@
     "ethers": "^6.8.1",
     "lucide-react": "^0.454.0",
     "near-api-js": "^2.1.4",
+    "pinata-web3": "^0.5.2",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
