--- a/package.json
+++ b/package.json
@@ -1,70 +1,38 @@
 {
-  "name": "automata_console",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "vite --host",
-    "build": "tsc && vite build",
-    "serve": "vite preview --port 3000",
-    "lint": "eslint . --ext .ts,.tsx,.js",
-    "prepare": "husky install",
-    "test": "vitest"
-  },
-  "dependencies": {
-    "@dnd-kit/core": "^6.0.8",
-    "@dnd-kit/sortable": "^7.0.2",
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@polkadot/api": "^15.0.1",
-    "@polkadot/api-augment": "^15.0.1",
-    "@polkadot/api-contract": "^15.0.1",
-    "@polkadot/extension-dapp": "^0.56.2",
-    "@react-spring/rafz": "^9.7.3",
-    "@solana/web3.js": "^1.87.1",
-    "@types/axios": "^0.14.0",
-    "@types/d3": "^7.4.0",
-    "@types/lodash": "^4.14.202",
-    "classnames": "^2.3.2",
-    "d3": "^7.8.5",
-    "ethers": "^6.8.1",
-    "lucide-react": "^0.454.0",
-    "near-api-js": "^2.1.4",
-    "pinata-web3": "^0.5.2",
-    "react": "^18.2.0",
-    "react-content-loader": "^6.2.1",
-    "react-dom": "^18.2.0",
-    "react-lottie": "^1.2.3",
-    "react-spring": "^9.7.2",
-    "react-svg-timeline": "^0.24.2",
-    "recharts": "^2.8.0",
-    "tw-elements": "^1.1.0",
-    "web3": "^4.2.2"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^17.4.3",
-    "@commitlint/config-conventional": "^17.4.3",
-    "@heroicons/react": "^2.0.15",
-    "@tailwindcss/forms": "^0.5.3",
-    "@types/bn.js": "^5.1.5",
-    "@types/classnames": "^2.3.1",
-    "@types/node": "18.13.0",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-lottie": "^1.2.10",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
-    "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-watch": "^8.0.0",
-    "husky": "^8.0.3",
-    "postcss": "^8.4.49",
-    "prettier": "^2.8.4",
-    "react-router-dom": "6.11.2",
-    "tailwindcss": "^3.4.15",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.1",
-    "vite-plugin-svgr": "^3.2.0",
-    "vitest": "^0.32.2"
-  }
+    "name": "automata_console",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview",
+        "format": "prettier --write .",
+        "format:check": "prettier --check ."
+    },
+    "dependencies": {
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^7.1.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.17.0",
+        "@types/react": "^18.3.17",
+        "@types/react-dom": "^18.3.5",
+        "@vitejs/plugin-react": "^4.3.4",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^9.17.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-react-hooks": "^5.0.0",
+        "eslint-plugin-react-refresh": "^0.4.16",
+        "globals": "^15.13.0",
+        "postcss": "^8.4.49",
+        "prettier": "3.4.2",
+        "tailwindcss": "^3.4.17",
+        "typescript": "~5.6.2",
+        "typescript-eslint": "^8.18.1",
+        "vite": "^6.0.3",
+        "vite-plugin-svgr": "^4.3.0"
+    }
 }
