--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
         "typescript-eslint": "^8.18.1",
         "vite": "^6.0.3",
         "vite-plugin-svgr": "^4.3.0"
+    },
+    "engines": {
+        "node": ">=20.0.0"
     }
 }
