--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
         "format:check": "prettier --check ."
     },
     "dependencies": {
+        "clsx": "^2.1.1",
+        "framer-motion": "^12.6.2",
+        "lucide-react": "^0.484.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^7.1.0"
+        "react-router-dom": "^7.1.0",
+        "tailwind-merge": "^3.0.2",
+        "typed.js": "^2.1.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
